Removed all hard references to pelgrimfamilie.net

--- a/Antonin.htm
+++ b/Antonin.htm
@@ -118,7 +118,7 @@
     <tr>
       <font face="Verdana" size="3">
                     <td align="center" width="77"></td>
-                    <td align="center" width="103"><a href="http://www.pelgrimfamilie.net/" target="_top"><img
+                    <td align="center" width="103"><a href="/" target="_top"><img
                     src="img/butthome2.gif" border="0" width="60"
                     height="25"></a></td>
                     <td align="center" width="67">&nbsp;</td>
