--- a/FortVechten/target43.html
+++ b/FortVechten/target43.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000">
-<span class="textbg">zie ook   http://www.pelgrimfamilie.net/janp.htm </span>
+<span class="textbg">zie ook   /janp.htm </span>
 <p><span class="textreg">
 <a href="target0.html">Eerste</a> |
 <a href="target42.html">Vorige afbeelding</a> |
