--- a/FortVechten/thumbnails.html
+++ b/FortVechten/thumbnails.html
@@ -93,6 +93,6 @@ Eind 1939, Vesting Holland</p>
 Waarschijnlijk Fort bij Vechten 1939, sgt Pelgrim links.
 Achterop foto staat: 'Zet 'm op, witte muizen' (wisten zij veel...)</p>
 <p class="framethumbnail"><a href="target43.html" target="images"><img src="thumbnails/p1010244_b.jpg" width="120" height="68" title="p1010244_b.jpg"  border="0"></a><br>
-zie ook   http://www.pelgrimfamilie.net/janp.htm</p>
+zie ook   /janp.htm</p>
 </body>
 </html>
