--- a/Graankorrel/navigatie.html
+++ b/Graankorrel/navigatie.html
@@ -40,11 +40,11 @@ A:HOVER {text-decoration: underline;}
 
   <center>
     <td align="left" bordercolor="#999999">
-      <a href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm" target="_top">
+      <a href="/gd/pelgrimf/par-Ftak.htm" target="_top">
       <font face="Verdana" size="2" color="#FFFFFF">Mijn familie(F-tak)</font></a></td>
     <tr>
       <td align="left">
-      <a href="http://www.pelgrimfamilie.net/hoofdpag2.html" target="_blank">
+      <a href="/hoofdpag2.html" target="_blank">
       <font face="Verdana" size="2" color="#FFFFFF">Pelgrim/Pilgram</font>
       </a>
       </td>
@@ -137,7 +137,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#800000">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimb/parB-tak.htm">
+<a target="_top" href="/gd/pelgrimb/parB-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(B)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pilgrim<br>
         MüLLER</font></a></font></p>
@@ -148,7 +148,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#800000">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(C)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         BESSELING(K)</font></a></font></p>
@@ -160,7 +160,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#FFFFFF">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimd/parD-tak.htm">
+<a target="_top" href="/gd/pelgrimd/parD-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(D)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pellegrom<br>
         BOS</font></a></font></p>
@@ -171,7 +171,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm">
+<a target="_top" href="/gd/pelgrime/parE-tak.htm">
 <font face="Verdana" size="2" color="#FFFFFF">(E)Tonnis Pelgrim<br>
         Marie Jansen</font></a></p>
 
@@ -180,7 +180,7 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td align="left">
 
-<p align="left"><b><a href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm" target="_top">
+<p align="left"><b><a href="/gd/pelgrimf/par-Ftak.htm" target="_top">
 <font color="#FFFFFF" face="Verdana" size="2">(F)-Pilgram<br>
         HAGEMEISTER</font></a></b></p>
 
@@ -190,7 +190,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#FFFFFF">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(G)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         van DILLEN</font></a></font></p>
@@ -202,21 +202,21 @@ A:HOVER {text-decoration: underline;}
 
 <p align="left">
 <font face="Verdana" size="2">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm">
 <font color="#FFFFFF">(H in C-tak)</font></a></font></p>
       </td>
     </tr>
     <tr>
       <td align="left">
       <font face="Verdana" size="2">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+      <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
       <font color="#FFFFFF">(I in C-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left" height="21">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <font face="Verdana" size="2" color="#FFFFFF">(J in G-tak)</font></a></p>
 
       </td>
@@ -225,7 +225,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font face="verdana" size="2">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <font color="#FFFFFF" face="Verdana" size="2">(K in G-tak)</font></a></p>
 
 </font>
@@ -236,7 +236,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm"><strong style="font-weight: 400">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm"><strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(L </font></strong>
 <font color="#FFFFFF" face="Verdana" size="2">in C-tak)</font></a></p>
 
@@ -247,7 +247,7 @@ A:HOVER {text-decoration: underline;}
 
 <p align="left"><font color="#FFFFFF">
 <strong style="font-weight: 400">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+<a target="_top" href="/gd/pelgrimr/parR-tak.htm">
 <font color="#FFFFFF" face="Verdana" size="2">(M in R-tak)</font></a></strong></font></p>
 
       </td>
@@ -255,39 +255,39 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td align="left">
       <font face="Verdana" size="2">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+      <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
       <strong style="font-weight: 400"><font color="#FFFFFF">(N </font> </strong>
       <font color="#FFFFFF">in C-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFF00">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+      <a target="_top" href="/gd/pelgrimr/parR-tak.htm">
       <strong style="font-weight: 400">
       <font color="#FFFFFF" face="Verdana" size="2">(O </font></strong>
       <font color="#FFFFFF" face="Verdana" size="2">in R-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFFFF">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+      <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
       <font color="#FFFFFF" face="Verdana" size="2">(P1- in P2)</font></a></font></td>
     </tr>
     <tr>
       <td align="left">
       <font color="#FFFFFF">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+      <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
       <font color="#FFFFFF" face="Verdana" size="2">(P2)-Pilgram<br>
         WALRAVEN</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFF00">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimq/parQ-tak.htm">
+      <a target="_top" href="/gd/pelgrimq/parQ-tak.htm">
       <strong style="font-weight: 400">
       <font color="#FFFFFF" face="Verdana" size="2">(Q)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         BAARDWIJK</font></a></font></td>
     </tr>
     <tr>
       <td align="left">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+      <a target="_top" href="/gd/pelgrimr/parR-tak.htm">
       <font face="Verdana" size="2" color="#FFFFFF">(R)-Pelgrim<br>
         van DILLEN(2)</font></a></td>
     </tr>
