--- a/Judith-1.html
+++ b/Judith-1.html
@@ -122,12 +122,12 @@ Oma de Jong: <a href="img/RouwkaartDeJong.jpg"><img border="2" src="img/Rouwkaar
         <table border="0">
           <font face="Verdana" size="3">
           <td align="center"></td>
-          <td align="center"><a href="http://www.pelgrimfamilie.net/" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
+          <td align="center"><a href="/" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
           <td align="center">&nbsp;</td>
           <td align="center"></td>
           <td align="center">&nbsp;</td>
           <td align="center"><a href="#boven"><img src="img/butttop2.gif" border="0" width="75" height="25"></a></td>
-          <td align="center"><a href="http://www.pelgrimfamilie.net/Judith-2.html" target="_top"><img src="img/anextgif027.gif" border="0" width="44" height="18"></a></td>
+          <td align="center"><a href="/Judith-2.html" target="_top"><img src="img/anextgif027.gif" border="0" width="44" height="18"></a></td>
           </table>
         </font></td>
     </tr>
