--- a/Judith-2.html
+++ b/Judith-2.html
@@ -104,13 +104,13 @@ Jan Meijvogel: <a href="img/HuisMeijvogel.jpg"><img border="2" src="img/HuisMeij
       <td>
         <table border="0">
           <font face="Verdana" size="3">
-          <td align="center"><a href="http://www.pelgrimfamilie.net/Judith-1.html" target="_top"><img src="img/abackgif026.gif" border="0" width="44" height="18"></a></td>
+          <td align="center"><a href="/Judith-1.html" target="_top"><img src="img/abackgif026.gif" border="0" width="44" height="18"></a></td>
           <td align="center"><a href="index.html" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
           <td align="center">&nbsp;</td>
           <td align="center"></td>
           <td align="center">&nbsp;</td>
           <td align="center"><a href="#boven"><img src="img/butttop2.gif" border="0" width="75" height="25"></a></td>
-          <td align="center"><a href="http://www.pelgrimfamilie.net/Judith-3.html" target="_top"><img src="img/anextgif027.gif" border="0" width="44" height="18"></a></td>
+          <td align="center"><a href="/Judith-3.html" target="_top"><img src="img/anextgif027.gif" border="0" width="44" height="18"></a></td>
           </table>
         </font></td>
     </tr>
