--- a/Kinderdijk.htm
+++ b/Kinderdijk.htm
@@ -152,7 +152,7 @@ content="text/html; charset=iso-8859-1">
         <td><a href="mailto:jan@pelgrimfamilie.net"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="http://www.pelgrimfamilie.net/Kinderdijk.htm"><img src="img/butttop2.gif"
+        <td><a href="/Kinderdijk.htm"><img src="img/butttop2.gif"
         border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
     </tr>
