--- a/Links2-Jan.htm
+++ b/Links2-Jan.htm
@@ -1809,7 +1809,7 @@ Erik van der-, Een Familie uit het Westland<br>
           Beja S-, o.a. Genealogie</font></a></font><font color="#800000" face="Verdana"></a><br>
           </font>
           <font color="#800000" face="Verdana" size="2">
-          <a name="boven665" target="_blank" href="http://www.pelgrimfamilie.net/">
+          <a name="boven665" target="_blank" href="/">
           <font color="#800000">Pelgrim, Jan, Pelgrim, Pilgram,Meijvogel, de- 
           Jong &amp; Roepman</font></a></font></a></b><br>
           <font color="#800000" face="Verdana" size="2">
