--- a/boven.html
+++ b/boven.html
@@ -40,30 +40,30 @@ A:HOVER {text-decoration: underline;}
 
  <form>
   <p align="left">&nbsp; <select name="list" onchange="showpage(this.form);" size="1">
- <option value="www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm">F-tak
+ <option value="/gd/pelgrimf/par-Ftak.htm">F-tak
  bijgewerkt 12-08-13</option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimb/parB-tak.htm">B-tak
+ <option value="/gd/pelgrimb/parB-tak.htm">B-tak
  bijgewerkt 11-04-13
  </option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">C-tak
+ <option value="/gd/pelgrimc/parC-tak.htm">C-tak
  bijgewerkt 11-04-13</option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">G-tak
+ <option value="/gd/pelgrimg/parG-tak.htm">G-tak
  bijgewerkt 11-04-13
  </option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">P2-tak
+ <option value="/gd/pelgrimp2/parP2tak.htm">P2-tak
  bijgewerk 11-04-13</option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">R-tak
+ <option value="/gd/pelgrimr/parR-tak.htm">R-tak
  bijgewerkt 11-04-13</option>
- <option value="www.pelgrimfamilie.net/gd/pelgrimd/parD-tak.htm">D-tak
+ <option value="/gd/pelgrimd/parD-tak.htm">D-tak
  bijgewerkt 11-04-13
  </option>
- <option value="www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm">E-tak
+ <option value="/gd/pelgrime/parE-tak.htm">E-tak
  bijgewerkt 11-04-13
  </option>
- <option value="www.pelgrimfamilie.net/gd/Meijvogel/ParMeijv.htm">Meijvogel
+ <option value="/gd/Meijvogel/ParMeijv.htm">Meijvogel
  bijgewerkt
  </option>
- <option value="www.pelgrimfamilie.net/index.html">HOME</option>
+ <option value="/index.html">HOME</option>
 </select><input type="button" value="Go" onclick="showpage(this.form);"></p>
 </form>
 <Script LANGUAGE="JavaScript">
@@ -82,15 +82,15 @@ A:HOVER {text-decoration: underline;}
   <td valign="top">
       <form>
   <p align="left">&nbsp; <select name="list" onchange="showpage(this.form);" size="1">
- <option value="www.pelgrimfamilie.net/CatOnderwerp.htm">Div.Informatie</option>
- <option value="www.pelgrimfamilie.net/hoofdpag4.html">Diverse LINKS</option>
- <option value="www.pelgrimfamilie.net/hoofdpag3.html">FOTO... Nieuw/Oud</option>
+ <option value="/CatOnderwerp.htm">Div.Informatie</option>
+ <option value="/hoofdpag4.html">Diverse LINKS</option>
+ <option value="/hoofdpag3.html">FOTO... Nieuw/Oud</option>
  <option value="Pelgrimfamilie.hyves.nl">Pelgrim@Hyves</option>
- <option value="www.pelgrimfamilie.net/Kinderdijk.htm">Kinderdijk</option>
+ <option value="/Kinderdijk.htm">Kinderdijk</option>
  <option value="www.seniorweb.nl/">SeniorWeb</option>
  <option value="mailgroep.seniorweb.nl/gen/">SW-Genealogie
  <option value="www.nederland.fm/">Nederland.FM</option>
- <option value="www.pelgrimfamilie.net/index.html">HOME</option>
+ <option value="/index.html">HOME</option>
 </select><input type="button" value="Go" onclick="showpage(this.form);"></p>
 </form>
 <Script LANGUAGE="JavaScript">
