--- a/gd/Roepman/boven2.html
+++ b/gd/Roepman/boven2.html
@@ -18,7 +18,7 @@ A:HOVER {text-decoration: underline;}
 <table border="0" width="93%" cellspacing="0" cellpadding="0">
   <tr>
     <td width="33%" valign="top">
-    <a target="_top" href="http://www.pelgrimfamilie.net/">
+    <a target="_top" href="/">
     <img border="0" src="BovenPlaatjeA.jpg" width="597" height="85" align="left"></a></td>
     <td width="2%" valign="top"><font face="Verdana" color="#666666">A</font></td>
     <td width="84%" valign="top" align="left">
