--- a/gd/pelgrimb/gd-hoofd.htm
+++ b/gd/pelgrimb/gd-hoofd.htm
@@ -447,7 +447,7 @@ e-mail (zie onder).</font></p>
         <table border="0" id="table14">
           <tr>
             <td>&nbsp;</td>
-            <td></a><a target="_top" href="http://www.pelgrimfamilie.net/"><img src="../../img/butthome2.gif" border="0" width="60" height="25"></a></td>
+            <td></a><a target="_top" href="/"><img src="../../img/butthome2.gif" border="0" width="60" height="25"></a></td>
           <td>&nbsp;</td>
           <td><a href="mailto:jan@pelgrimfamilie.net"><img src="../../img/buttmail2.gif" border="0" width="75" height="25"></a></td>
           <td>&nbsp;</td>
