--- a/gd/pelgrimr/gd-hoofd.htm
+++ b/gd/pelgrimr/gd-hoofd.htm
@@ -639,7 +639,7 @@ e-mail (zie onder).</font></p>
 <table border="0" id="table14">
     <tr>
         <td>&nbsp;</td>
-        <td><a target="_top" href="http://www.pelgrimfamilie.net/">
+        <td><a target="_top" href="/">
         <img
         src="../../img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
