--- a/hoofdpag2.html
+++ b/hoofdpag2.html
@@ -142,14 +142,14 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         <tr>
             <td bgcolor="#CCFFCC">
             <b>
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimb/parB-tak.htm">
+            <a href="/gd/pelgrimb/parB-tak.htm">
             <font face="Verdana" size="2" color="#800000">B-tak</font></a></b></td>
             <td>
             &nbsp;</td>
             <td>
             &nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimb/parB-tak.htm">
+            <a target="_top" href="/gd/pelgrimb/parB-tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Herman Friedrich PILGRIM g/m
             Margarethe Elisabeth MüLLER</font></a></td>
@@ -157,14 +157,14 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <b><a href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+            <b><a href="/gd/pelgrimc/parC-tak.htm">
             <font face="Verdana" size="2" color="#800000">C-tak</font></a></b></td>
             <td>
             &nbsp;</td>
             <td>
             &nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+            <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Garrit- g/m Elsken
             BESSELING(K)</font></a></td>
@@ -172,21 +172,21 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimd/parD-tak.htm"><b>
+            <a href="/gd/pelgrimd/parD-tak.htm"><b>
             <font face="Verdana" size="2" color="#800000">D-tak</font></b></a></td>
             <td>
             &nbsp;</td>
             <td>
             &nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimd/parD-tak.htm">
+            <a target="_top" href="/gd/pelgrimd/parD-tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Hendrik Klaasse Pellegrom g/m Dina BOS</font></a></td>
             <td><font color="#800000" face="Verdana" size="2">± 1805</font></td>
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm"><b>
+            <a href="/gd/pelgrime/parE-tak.htm"><b>
             <font face="Verdana" size="2" color="#800000">E-tak</font></b></a></td>
             <td>
             &nbsp;</td>
@@ -195,20 +195,20 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
             <td width="505">
             <font color="#800000"
             face="Verdana" size="2">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm">
+            <a target="_top" href="/gd/pelgrime/parE-tak.htm">
             <font color="#800000">Tonnis- g/m Marie JANSEN</font></a></font></td>
             <td><font color="#800000" face="Verdana" size="2">± 1650</font></td>
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm"><b>
+            <a href="/gd/pelgrimf/par-Ftak.htm"><b>
             <font face="Verdana" size="2" color="#800000">F-tak</font></b></a></td>
             <td>
             &nbsp;</td>
             <td>
             &nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm">
+            <a target="_top" href="/gd/pelgrimf/par-Ftak.htm">
             <font
             color="#800000" face="Verdana" size="2">Christoph PILGRAM
             g/m Catharina HAGEMEISTER(mijn voorouders)</font></a></td>
@@ -216,14 +216,14 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm"><b>
+            <a href="/gd/pelgrimg/parG-tak.htm"><b>
             <font face="Verdana" size="2" color="#800000">G-tak</font></b></a></td>
             <td>
             &nbsp;</td>
             <td>
             &nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+            <a target="_top" href="/gd/pelgrimg/parG-tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Evert- g/m Derske VAN DILLEN</font></a></td>
             <td><font color="#800000" face="Verdana" size="2">± 1763</font></td>
@@ -344,12 +344,12 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+            <a href="/gd/pelgrimp2/parP2tak.htm">
             <b><font face="Verdana" size="2" color="#800000">P2-tak</font></b></a></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+            <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Johannes Wilhelmus PILGRAM g/m Johanna 
             Catarina WALRAVEN</font></a></td>
@@ -357,12 +357,12 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimq/parQ-tak.htm"><b>
+            <a href="/gd/pelgrimq/parQ-tak.htm"><b>
             <font face="Verdana" size="2" color="#800000">Q-tak</font></b></a></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td width="505">
-            <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimq/parQ-tak.htm">
+            <a target="_top" href="/gd/pelgrimq/parQ-tak.htm">
             <font color="#800000"
             face="Verdana" size="2">Cornelis PELGRIM g/m Petronella
             van BAARDWIJK</font></a></td>
@@ -370,13 +370,13 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
         </tr>
         <tr>
             <td bgcolor="#CCFFCC">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm"><b>
+            <a href="/gd/pelgrimr/parR-tak.htm"><b>
             <font face="Verdana" size="2" color="#800000">R-tak</font></b></a></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td width="505">
             <font face="Verdana" size="2" color="#800000">
-            <a href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+            <a href="/gd/pelgrimr/parR-tak.htm">
             <font color="#800000">Gerrit(Garrit) PELGRIM. Tr. 6-01-1760 
             Geesken(Gesina of Gisberta) van DILLEN(extra uitbreiding dankzij Wim 
             Pelgrim-Overijssel)</font></a></font></td>
