--- a/hoofdpag3.html
+++ b/hoofdpag3.html
@@ -31,14 +31,14 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td width="295" align="right">
       <font face="Verdana" size="2" color="#800000">
-                  <a target="_blank" href="http://www.pelgrimfamilie.net/FortVechten/index.html">
+                  <a target="_blank" href="/FortVechten/index.html">
       <font color="#800000">Met Vrienden van Oud Leerdam <br>
       02-05-09 naar 
                   Fort-Vechten &gt;&gt;&gt;</font></a></font></td>
       <td width="51" align="center">&nbsp;</td>
       <td width="270" align="left">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/FortVechten/index.html">
-      <img border="0" src="img/FortVechtenKlein.jpg" width="180" height="250"></a><font face="Verdana" size="2" color="#800000"><a href="http://www.pelgrimfamilie.net/FortVechten/index.html">&nbsp;
+      <a target="_blank" href="/FortVechten/index.html">
+      <img border="0" src="img/FortVechtenKlein.jpg" width="180" height="250"></a><font face="Verdana" size="2" color="#800000"><a href="/FortVechten/index.html">&nbsp;
       </a></font></td>
     </tr>
     <tr>
@@ -49,12 +49,12 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td width="295" align="right">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Keukenhof2009/index.html">
+      <a target="_blank" href="/Keukenhof2009/index.html">
       <img border="0" src="img/Keukenhof-2009.jpg" width="250" height="188"></a></td>
       <td width="51" align="center">&nbsp;</td>
       <td width="270" align="left">
       <font face="Verdana" size="2" color="#800000">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Keukenhof2009/index.html">
+      <a target="_blank" href="/Keukenhof2009/index.html">
       <font color="#800000">&lt;&lt;&lt; Keukenhof 2009</font></a></font></td>
     </tr>
     <tr>
@@ -69,7 +69,7 @@ A:HOVER {text-decoration: underline;}
       <td width="51" align="center">
       <p align="right"><b>
       <font face="Verdana" size="2" color="#800000">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/FamDag2008/Familie-Dagje-2008/index.html">
+      <a target="_blank" href="/FamDag2008/Familie-Dagje-2008/index.html">
       <font color="#800000">Fam.<br>
       Dagje<br>
       2008</font></a></font></b></td>
@@ -83,12 +83,12 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td width="295" align="right">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Blijdorp/Blijdorp-200908/index.html">
+      <a target="_blank" href="/Blijdorp/Blijdorp-200908/index.html">
       <font face="Verdana" color="#800000" size="2">Oma 70jr, Diergaarde 
       Blijdorp, 2008 &gt;&gt;&gt;</font></a></td>
       <td width="51" align="center">&nbsp;</td>
       <td width="270" align="left">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Blijdorp/Blijdorp-200908/index.html">
+      <a target="_blank" href="/Blijdorp/Blijdorp-200908/index.html">
       <img border="0" src="img/Blijdorp2008.jpg" width="250" height="157"></a></td>
     </tr>
     <tr>
@@ -128,12 +128,12 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td width="295" align="right">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/FOTO/index.html">
+      <a target="_blank" href="/FOTO/index.html">
       <img border="0" src="img/Amersfoort.jpg" width="250" height="188"></a></td>
       <td width="51" align="center">&nbsp;</td>
       <td width="270" align="left">
       <font face="Verdana" size="2" color="#800000">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/FOTO/index.html">
+      <a target="_blank" href="/FOTO/index.html">
       <font color="#800000">&lt;&lt;&lt; Met Vrienden van Oud-Leerdam nr Amersfoort, 
       14-10-06</font></a></font></td>
     </tr>
@@ -145,16 +145,16 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td width="295" align="right">
       <p><font face="Verdana" size="2" color="#800000">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Daniel/index.html">
+      <a target="_blank" href="/Daniel/index.html">
       <font color="#800000">Daniël Pelgrim, in actie</font></a></font></td>
       <td width="51" align="center">
       <font
             color="#800000" size="2" face="Verdana"> 
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Daniel/index.html">
+      <a target="_blank" href="/Daniel/index.html">
       <font color="#800000">&gt;&gt;&gt;</font></a></font></td>
       <td width="270" align="left">
       <font face="Verdana" size="2" color="#800000">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/Daniel/index.html">
+      <a target="_blank" href="/Daniel/index.html">
       <font color="#800000">op het voetbalveld!</font></a></font></td>
     </tr>
     <tr>
@@ -164,12 +164,12 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td width="295" align="right">
-      <a target="_self" href="http://www.pelgrimfamilie.net/janp.htm">
+      <a target="_self" href="/janp.htm">
       <img border="0" src="img/AndreSrFortVechten.jpg" width="250" height="142"></a></td>
       <td width="51" align="center">&nbsp;</td>
       <td width="270" align="left">
       <font face="Verdana" size="2" color="#800000">
-      <a target="_self" href="http://www.pelgrimfamilie.net/janp.htm">
+      <a target="_self" href="/janp.htm">
       <font color="#800000">&lt;&lt;&lt; Fort Vechten, André Pelgrim sr.</font></a></font></td>
     </tr>
     <tr>
@@ -181,7 +181,7 @@ A:HOVER {text-decoration: underline;}
       <td width="295" align="right"><font size="2" face="Verdana"><font color="#800000">
             Gezin van
             Jan Pelgrim &amp; </font>
-      <a target="_blank" href="http://www.pelgrimfamilie.net/gd/Roepman/ParRoepm.htm"><font color="#0000FF">Elly-Roepman</font></a></font><b><font face="Verdana" color="#800000" size="2"> </font></b>
+      <a target="_blank" href="/gd/Roepman/ParRoepm.htm"><font color="#0000FF">Elly-Roepman</font></a></font><b><font face="Verdana" color="#800000" size="2"> </font></b>
       <font
             color="#800000" size="2" face="Verdana"> <br>
             3 zoons,&nbsp;toen 2 schoondochters (nu 3)<br>
@@ -192,7 +192,7 @@ A:HOVER {text-decoration: underline;}
       <font face="Verdana" color="#800000" size="2">&nbsp;</font></b></td>
       <td width="51" align="center"></td>
       <td width="270" align="left"><font color="#000000" size="2">
-      <a target="_blank" href="http://www.pelgrimfamilie.net/gd/Roepman/ParRoepm.htm"><img src="img/gezinjan.jpg"
+      <a target="_blank" href="/gd/Roepman/ParRoepm.htm"><img src="img/gezinjan.jpg"
             align="middle" width="209" height="123"></a></font></td>
     </tr>
     <tr>
@@ -223,7 +223,7 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td width="295" align="right"><font size="2" face="Verdana"><font color="#800000">Het gezin Jan Pelgrim &amp;
             </font>
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/DeJong/parJong.htm"><font color="#0000FF">Marrigje
+      <a target="_top" href="/gd/DeJong/parJong.htm"><font color="#0000FF">Marrigje
             de Jong,</font></a></font><font color="#800000" size="2" face="Verdana"><br>
  ± 1932 in
             het Sterrebos te Schiedam<br>
