--- a/hoofdpagDuits.html
+++ b/hoofdpagDuits.html
@@ -104,11 +104,11 @@ A:HOVER {text-decoration: underline;}
                   <li>
                     <p align="left">
                     <font face="Verdana" size="2" color="#800000">
-                    <a target="_blank" href="http://www.pelgrimfamilie.net/Keukenhof-2011/index.html">
+                    <a target="_blank" href="/Keukenhof-2011/index.html">
                     <font color="#800000">FOTO: Keukenhof 2011</font></a></font></li>
                   <li>
                     <p align="left">
-                    <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+                    <a target="_top" href="/gd/pelgrimg/parG-tak.htm">
                     <font size="2" color="#800000" face="Verdana">Pelgrim,
                     'G-file' Herd-Pelgrim ;-))&nbsp;</font></a></li>
                   <li>
@@ -285,7 +285,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="89" hei
           <tr>
             <td width="149" height="16">
               <p align="center">
-              <a target="_top" href="http://www.pelgrimfamilie.net/gd/KwartEle/KwartEle.htm">
+              <a target="_top" href="/gd/KwartEle/KwartEle.htm">
               <font face="Verdana" size="2" color="#800000">Elena, Lianne &amp;
               Rens</font></a></td>
           </tr>
