--- a/hoofdpagina-reserve.html
+++ b/hoofdpagina-reserve.html
@@ -129,27 +129,27 @@ A:HOVER {text-decoration: underline;}
                   <li>
                     <p align="left">
                     <font face="Verdana" size="2" color="#800000">
-                    <a target="_blank" href="http://www.pelgrimfamilie.net/Keukenhof-2007/index.html">
+                    <a target="_blank" href="/Keukenhof-2007/index.html">
                     <font color="#800000">FOTO: Keukenhof 2007</font></a></font></li>
                   <li>
                     <p align="left">
                     <font face="Verdana" size="2" color="#800000">
-                    <a target="_blank" href="http://www.pelgrimfamilie.net/FOTO/index.html">
+                    <a target="_blank" href="/FOTO/index.html">
                     <font color="#800000">FOTO: Met Ver.Oud-Leerdam nr 
                     Amersfoort, 14-10-06</font></a></font></li>
                   <li>
                     <p align="left">
                     <font face="Verdana" size="2" color="#800000">
-                    <a target="_blank" href="http://www.pelgrimfamilie.net/Daniel/index.html">
+                    <a target="_blank" href="/Daniel/index.html">
                     <font color="#800000">FOTO: Daniël Pelgrim, in actie op het 
                     voetbalveld! </font></a></font></li>
                   <li>
                   <p align="left"><font face="Verdana" size="2" color="#800000">
-                  <a target="_blank" href="http://www.pelgrimfamilie.net/FamDag2006/FamilieDagje2006/index.html">
+                  <a target="_blank" href="/FamDag2006/FamilieDagje2006/index.html">
                   <font color="#800000">FOTO: Familie dagje juni 2006</font></a></font></li>
                   <li>
                   <p align="left"><font face="Verdana" size="2" color="#800000">
-                  <a target="_blank" href="http://www.pelgrimfamilie.net/Nog4Fotografen/Nog-4-Fotografen/index.html">
+                  <a target="_blank" href="/Nog4Fotografen/Nog-4-Fotografen/index.html">
                   <font color="#800000">FOTO: Familie dagje juni 2006(nog 4 
                   fotografen)</font></a></font></li>
                   <li>
@@ -445,7 +445,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="125" he
           <tr>
             <td width="149" height="16">
               <p align="left">
-          <a href="javascript:window.external.AddFavorite('http://www.pelgrimfamilie.net/', 'DE site voor Pelgrim families')"><font face="Verdana" size="2" color="#333333">Klik
+          <a href="javascript:window.external.AddFavorite('/', 'DE site voor Pelgrim families')"><font face="Verdana" size="2" color="#333333">Klik
           hier om deze pagina bij
           uw
           </font><font face="Verdana" size="2" color="#FF0000">Favorieten
@@ -464,7 +464,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="125" he
         <a name="boven2">
               <!-- Begin Top 100 Genealogy Sites -->
         <a href="#"
-onclick="this.style.behavior='url(#default#homepage)'; this.setHomePage('http://www.pelgrimfamilie.net/');"><font
+onclick="this.style.behavior='url(#default#homepage)'; this.setHomePage('/');"><font
 size="2" color="#333333" face="Verdana">Klik hier om deze pagina </font><font
 size="2" color="#FF0000" face="Verdana"> als</font><font
 size="2" color="#333333" face="Verdana"> </font><font
