--- a/index_oud.html
+++ b/index_oud.html
@@ -82,7 +82,7 @@ When Frontpage Server Extensions are enabled a Frontpage user named <i>webmaster
 								<TD><FONT SIZE="4" COLOR="#339933" FACE="Helvetica, Arial"><B>Site Management Access<BR>
 									<BR>
 									</B></FONT><FONT SIZE="2" FACE="Helvetica, Arial">Site administrators use the URL:<BR>
-									</FONT><A HREF="http://www.pelgrimfamilie.net/siteadmin/"><FONT SIZE="2" FACE="Helvetica, Arial">http://www.pelgrimfamilie.net/siteadmin/<BR>
+									</FONT><A HREF="/siteadmin/"><FONT SIZE="2" FACE="Helvetica, Arial">/siteadmin/<BR>
 									<BR>
 									</FONT></A><FONT SIZE="2" FACE="Helvetica, Arial">Once you enter this URL, you will
 									be prompted for the site administrator's user name and password which your hosting
@@ -112,10 +112,10 @@ When Frontpage Server Extensions are enabled a Frontpage user named <i>webmaster
 								<TD><FONT SIZE="4" COLOR="#339933" FACE="Helvetica, Arial"><B>Personal Account Management<BR>
 									<BR>
 									</B></FONT><FONT SIZE="2" FACE="Helvetica, Arial">Users manage their profile at the
-									URL: </FONT><A HREF="/personal/"><FONT SIZE="2" FACE="Helvetica, Arial">http://www.pelgrimfamilie.net/personal/<BR>
+									URL: </FONT><A HREF="/personal/"><FONT SIZE="2" FACE="Helvetica, Arial">/personal/<BR>
 									<BR>
 									</FONT></A><FONT SIZE="2" FACE="Helvetica, Arial">Individual users have their own
-									web sites at the URL: http://www.pelgrimfamilie.net/users/&lt;username&gt;/</FONT></TD>
+									web sites at the URL: /users/&lt;username&gt;/</FONT></TD>
 							</TR>
 							<TR>
 								<TD>&nbsp;</TD>
