--- a/navigatie.html
+++ b/navigatie.html
@@ -27,7 +27,7 @@ A:HOVER {text-decoration: underline;}
   <table border="0" cellpadding="0" width="125">
     <tr>
     <td align="left" bordercolor="#999999">
-      <p align="left"><a href="http://pelgrimfamilie.net/totlistpelgr.htm" target="hoofdframe"><b><font color="#FFFFFF">Voorkomende
+      <p align="left"><a href="/totlistpelgr.htm" target="hoofdframe"><b><font color="#FFFFFF">Voorkomende
       Familienamen</font></b></a></p>
     </td>
     </tr>
@@ -39,7 +39,7 @@ A:HOVER {text-decoration: underline;}
 
   <center>
     <td align="left" bordercolor="#999999">
-      <a href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm" target="_top">
+      <a href="/gd/pelgrimf/par-Ftak.htm" target="_top">
       <font face="Verdana" size="2" color="#FFFFFF">Mijn familie(F-tak)</font></a></td>
     <tr>
       <td align="left">
@@ -53,21 +53,21 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td align="left">
-      <a href="http://pelgrimfamilie.net/gd/DeJong/parJong.htm" target="_top"><b>
+      <a href="/gd/DeJong/parJong.htm" target="_top"><b>
       <font face="verdana" size="2" color="#FFFFFF">De Jong</font>
       </b></a>
       </td>
     </tr>
     <tr>
       <td align="left" height="24">
-      <a href="http://www.pelgrimfamilie.net/gd/Meijvogel/ParMeijv.htm" target="_top"><b>
+      <a href="/gd/Meijvogel/ParMeijv.htm" target="_top"><b>
       <font face="Verdana" size="2" color="#FFFFFF">Meijvogel</font>
       </b></a>
       </td>
     </tr>
     <tr>
       <td align="left" height="24">
-      <a href="http://pelgrimfamilie.net/gd/Roepman/ParRoepm.htm" target="_top"><b>
+      <a href="/gd/Roepman/ParRoepm.htm" target="_top"><b>
       <font face="verdana" size="2" color="#FFFFFF">Roepman</font>  
       </b></a>  
       </td>
@@ -109,7 +109,7 @@ A:HOVER {text-decoration: underline;}
     </tr>
     <tr>
       <td align="left">
-      <a href="http://pelgrimfamilie.net/ParJesse.htm" target="hoofdframe">
+      <a href="/ParJesse.htm" target="hoofdframe">
       <font face="verdana" size="2" color="#FFFFFF">Jesse, Julia, Lara,<br>
       Aron</font></a>
       </td>
@@ -144,7 +144,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#800000">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimb/parB-tak.htm">
+<a target="_top" href="/gd/pelgrimb/parB-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(B)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pilgrim<br>
         MüLLER</font></a></font></p>
@@ -155,7 +155,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#800000">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(C)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         BESSELING(K)</font></a></font></p>
@@ -167,7 +167,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#FFFFFF">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimd/parD-tak.htm">
+<a target="_top" href="/gd/pelgrimd/parD-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(D)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pellegrom<br>
         BOS</font></a></font></p>
@@ -178,7 +178,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm">
+<a target="_top" href="/gd/pelgrime/parE-tak.htm">
 <font face="Verdana" size="2" color="#FFFFFF">(E)Tonnis Pelgrim<br>
         Marie Jansen</font></a></p>
 
@@ -187,7 +187,7 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td align="left">
 
-<p align="left"><b><a href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm" target="_top">
+<p align="left"><b><a href="/gd/pelgrimf/par-Ftak.htm" target="_top">
 <font color="#FFFFFF" face="Verdana" size="2">(F)-Pilgram<br>
         HAGEMEISTER</font></a></b></p>
 
@@ -197,7 +197,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font color="#FFFFFF">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(G)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         van DILLEN</font></a></font></p>
@@ -209,21 +209,21 @@ A:HOVER {text-decoration: underline;}
 
 <p align="left">
 <font face="Verdana" size="2">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm">
 <font color="#FFFFFF">(H in C-tak)</font></a></font></p>
       </td>
     </tr>
     <tr>
       <td align="left">
       <font face="Verdana" size="2">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+      <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
       <font color="#FFFFFF">(I in C-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left" height="21">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <font face="Verdana" size="2" color="#FFFFFF">(J in G-tak)</font></a></p>
 
       </td>
@@ -232,7 +232,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left"><font face="verdana" size="2">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+<a target="_top" href="/gd/pelgrimg/parG-tak.htm">
 <font color="#FFFFFF" face="Verdana" size="2">(K in G-tak)</font></a></p>
 
 </font>
@@ -243,7 +243,7 @@ A:HOVER {text-decoration: underline;}
       <td align="left">
 
 <p align="left">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm"><strong style="font-weight: 400">
+<a target="_top" href="/gd/pelgrimc/parC-tak.htm"><strong style="font-weight: 400">
 <font color="#FFFFFF" face="Verdana" size="2">(L </font></strong>
 <font color="#FFFFFF" face="Verdana" size="2">in C-tak)</font></a></p>
 
@@ -254,7 +254,7 @@ A:HOVER {text-decoration: underline;}
 
 <p align="left"><font color="#FFFFFF">
 <strong style="font-weight: 400">
-<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+<a target="_top" href="/gd/pelgrimr/parR-tak.htm">
 <font color="#FFFFFF" face="Verdana" size="2">(M in R-tak)</font></a></strong></font></p>
 
       </td>
@@ -262,39 +262,39 @@ A:HOVER {text-decoration: underline;}
     <tr>
       <td align="left">
       <font face="Verdana" size="2">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimc/parC-tak.htm">
+      <a target="_top" href="/gd/pelgrimc/parC-tak.htm">
       <strong style="font-weight: 400"><font color="#FFFFFF">(N </font> </strong>
       <font color="#FFFFFF">in C-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFF00">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+      <a target="_top" href="/gd/pelgrimr/parR-tak.htm">
       <strong style="font-weight: 400">
       <font color="#FFFFFF" face="Verdana" size="2">(O </font></strong>
       <font color="#FFFFFF" face="Verdana" size="2">in R-tak)</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFFFF">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+      <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
       <font color="#FFFFFF" face="Verdana" size="2">(P1- in P2)</font></a></font></td>
     </tr>
     <tr>
       <td align="left">
       <font color="#FFFFFF">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
+      <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
       <font color="#FFFFFF" face="Verdana" size="2">(P2)-Pilgram<br>
         WALRAVEN</font></a></font></td>
     </tr>
     <tr>
       <td align="left"><font color="#FFFF00">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimq/parQ-tak.htm">
+      <a target="_top" href="/gd/pelgrimq/parQ-tak.htm">
       <strong style="font-weight: 400">
       <font color="#FFFFFF" face="Verdana" size="2">(Q)-</font></strong><font color="#FFFFFF" face="Verdana" size="2">Pelgrim<br>
         BAARDWIJK</font></a></font></td>
     </tr>
     <tr>
       <td align="left">
-      <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimr/parR-tak.htm">
+      <a target="_top" href="/gd/pelgrimr/parR-tak.htm">
       <font face="Verdana" size="2" color="#FFFFFF">(R)-Pelgrim<br>
         van DILLEN(2)</font></a></td>
     </tr>
