--- a/Judith-3.html
+++ b/Judith-3.html
@@ -107,7 +107,7 @@ Opa Pelgrim: <a href="img/RouwkaartPa.jpg"><img border="2" src="img/RouwkaartPa_
       <td>
         <table border="0">
           <font face="Verdana" size="3">
-          <td align="center"><a href="http://www.pelgrimfamilie.net/Judith-2.html" target="_top"><img src="img/abackgif026.gif" border="0" width="44" height="18"></a></td>
+          <td align="center"><a href="/Judith-2.html" target="_top"><img src="img/abackgif026.gif" border="0" width="44" height="18"></a></td>
           <td align="center"><a href="index.html" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
           <td align="center">&nbsp;</td>
           <td align="center"></td>
