--- a/PelgrimSites.html
+++ b/PelgrimSites.html
@@ -395,7 +395,7 @@ A:HOVER {text-decoration: underline;}
             <font size="2" face="Verdana" color="#800000">Pelgrim, Frans- Deventer</font></a><br>
             <a href name="boven1015">
             <font color="#800000" face="Verdana" size="2">
-            <a target="_blank" name="boven1016" href="http://www.pelgrimfamilie.net/">
+            <a target="_blank" name="boven1016" href="/">
             <font color="#800000">Pelgrim&nbsp; en Pilgram families</font></a></font></a><br>
             <a href name="boven1011">
             <font color="#800000" face="Verdana" size="2">
@@ -833,7 +833,7 @@ A:HOVER {text-decoration: underline;}
     <center>
 
                 <td align="center">&nbsp;</td>
-                <td align="center"><a href="http://www.pelgrimfamilie.net/index.html" target="_top"><img
+                <td align="center"><a href="/index.html" target="_top"><img
                 src="img/butthome2.gif" border="0" width="60"
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
