--- a/gd/Meijvogel/boven2.html
+++ b/gd/Meijvogel/boven2.html
@@ -19,7 +19,7 @@ A:HOVER {text-decoration: underline;}
   <table border="0" width="986" bordercolorlight="#FFCC66" bordercolordark="#800000" cellspacing="0" cellpadding="0">
     <tr>
       <td width="609" align="left" valign="top">
-        <p><a target="_top" href="http://www.pelgrimfamilie.net/">
+        <p><a target="_top" href="/">
     <img border="0" src="BovenPlaatjeA.jpg" width="597" height="85"></a></p>
       </td>
       <td width="46" align="left" valign="top">
