--- a/gd/pelgrimr/boven2.html
+++ b/gd/pelgrimr/boven2.html
@@ -19,7 +19,7 @@ A:HOVER {text-decoration: underline;}
   <table border="0" width="1200" bordercolorlight="#FFCC66" bordercolordark="#800000" cellspacing="0" cellpadding="0">
     <tr>
       <td width="636" align="left" valign="top">
-        <p align="left"><a target="_top" href="http://www.pelgrimfamilie.net/"><img border="0" src="BovenPlaatjeA.jpg" width="636" height="85"></a></p>
+        <p align="left"><a target="_top" href="/"><img border="0" src="BovenPlaatjeA.jpg" width="636" height="85"></a></p>
       </td>
       <td width="16" align="left" valign="top">
         <font face="Verdana" color="#666666">A</font>
