--- a/hoofdpag4.html
+++ b/hoofdpag4.html
@@ -30,7 +30,7 @@ A:HOVER {text-decoration: underline;}
             <tr> 
 
                 <td align="center">&nbsp;</td>
-                <td align="center"><a href="http://www.pelgrimfamilie.net/index.html" target="_top"><img
+                <td align="center"><a href="/index.html" target="_top"><img
                 src="img/butthome2.gif" border="0" width="60"
                 height="25"></a></td>
             </tr>
@@ -509,7 +509,7 @@ A:HOVER {text-decoration: underline;}
             <td width="100%" height="21">
             <p align="left"><font face="Verdana" size="2" color="#800000">
             </a>
-            <a target="_self" href="http://www.pelgrimfamilie.net/ChrGerKerk.htm">
+            <a target="_self" href="/ChrGerKerk.htm">
             <font color="#800000">1e Steenlegging Chr.Ger.Kerk Schiedam dd <b>04-11-1922</b></font></a></font><br>
             <a href="http://www.bijbelenpc.nl/" target="_blank">
             <font face="Verdana" size="2" color="#800000">Bijbel&amp;PC gebr,groep-HCC<br></font></a>
@@ -3922,7 +3922,7 @@ beroepen (foto's)<br>
     <center>
 
                 <td align="center">&nbsp;</td>
-                <td align="center"><a href="http://www.pelgrimfamilie.net/index.html" target="_top"><img
+                <td align="center"><a href="/index.html" target="_top"><img
                 src="img/butthome2.gif" border="0" width="60"
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
