--- a/hoofdpagEngels.html
+++ b/hoofdpagEngels.html
@@ -98,15 +98,15 @@ A:HOVER {text-decoration: underline;}
                   <li>
                     <p align="left">
                     <font face="Verdana" size="2" color="#800000">
-                    <a target="_blank" href="http://www.pelgrimfamilie.net/Keukenhof-2011/index.html">
+                    <a target="_blank" href="/Keukenhof-2011/index.html">
                     <font color="#800000">FOTO: Keukenhof 2011</font></a></font></li>
                   <li>
                     <p align="left">
-                    <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimg/parG-tak.htm">
+                    <a target="_top" href="/gd/pelgrimg/parG-tak.htm">
                     <font face="Verdana" size="2" color="#800000">Pelgrim,
                     The so called 'K-branch, it's now G-branch'</font></a></li>
                   <li>
-                    <p align="left"><a href="http://www.pelgrimfamilie.net/badsachsa.htm"><font size="2" color="#800000" face="Verdana">
+                    <p align="left"><a href="/badsachsa.htm"><font size="2" color="#800000" face="Verdana">
                     Organ music and carrilon from Bad Sachsa</font></a></li>
                   <li>
                     <p align="left">
@@ -114,7 +114,7 @@ A:HOVER {text-decoration: underline;}
                     Hermann Büdding (Wichel Pelgrim) </font></a></li>
                   <li>
                     <p align="left">
-                    <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm"><font size="2" face="Verdana" color="#800000">Oldest
+                    <a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font size="2" face="Verdana" color="#800000">Oldest
                     forefather PILGRAM!!</font></a></li>
                   <li>
                     <p align="left">
@@ -124,10 +124,10 @@ A:HOVER {text-decoration: underline;}
                     <p align="left">
                 <a href="Antonin.htm">
                 <font color="#800000" face="verdana" size="2">Antonin
-                    Pilgram (Tsjechië)</font></a><a href="http://www.pelgrimfamilie.net/Jan.htm"><font size="2" color="#800000" face="Verdana">&nbsp;</font></a></li>
+                    Pilgram (Tsjechië)</font></a><a href="/Jan.htm"><font size="2" color="#800000" face="Verdana">&nbsp;</font></a></li>
                   <li>
                   <p align="left">
-                  <a href="http://www.pelgrimfamilie.net/WaarheenPelgrim.htm">
+                  <a href="/WaarheenPelgrim.htm">
                   <font size="2" color="#800000" face="Verdana">Where
                     to Pelgrims. Genealogist and 'Old writers?'</font></a></li>
                   <li>
@@ -273,7 +273,7 @@ searchpossibilities and schedules</font></a><font color="#800000">.</font>
           <tr>
             <td width="149" height="16" align="center">
               <p align="center">
-              <a target="_top" href="http://www.pelgrimfamilie.net/gd/KwartEle/KwartEle.htm">
+              <a target="_top" href="/gd/KwartEle/KwartEle.htm">
               <font face="Verdana" size="2" color="#800000">Elena, Lianne &amp;
               Rens</font></a></p>
             </td>
