--- a/hoofdpagina.html
+++ b/hoofdpagina.html
@@ -85,13 +85,13 @@ A:HOVER {text-decoration: underline;}
         <p align="left"><font color="#800000" face="Verdana" size="2"><b>
         <font color="#800000">&nbsp;*<a target="_blank" href="http://www.facebook.com/jan.pelgrim"><font color="#800000">)</font></a></font>
         <a target="_blank" href="http://www.facebook.com/jan.pelgrim1"><font color="#800000">Join Pelgrim&amp;Pilgram@Facebook</font></a></b></font></p>
-        <p align="left"><font face="Verdana" size="2" color="#800000">&nbsp;<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm"><font color="#800000">1)
+        <p align="left"><font face="Verdana" size="2" color="#800000">&nbsp;<a target="_top" href="/gd/pelgrime/parE-tak.htm"><font color="#800000">1)
         </font></a>
-                <a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimp2/parP2tak.htm">
-                <font color="#800000">Vraagje aan Fam.leden PILGRAM</font></a><a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm"><font color="#800000"> </font></a></font><br>
-        <font color="#800000" face="Verdana" size="2">&nbsp;<a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm"><font color="#800000">2) 
-                </font></a><a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrime/parE-tak.htm"><font color="#800000">E-tak bijgewerkt(waarin gegevens
-                  Hans Hermann Büdding Dld)</font></a><a target="_top" href="http://www.pelgrimfamilie.net/gd/pelgrimf/par-Ftak.htm"><font color="#800000"> </font></a></font><br>
+                <a target="_top" href="/gd/pelgrimp2/parP2tak.htm">
+                <font color="#800000">Vraagje aan Fam.leden PILGRAM</font></a><a target="_top" href="/gd/pelgrime/parE-tak.htm"><font color="#800000"> </font></a></font><br>
+        <font color="#800000" face="Verdana" size="2">&nbsp;<a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font color="#800000">2) 
+                </font></a><a target="_top" href="/gd/pelgrime/parE-tak.htm"><font color="#800000">E-tak bijgewerkt(waarin gegevens
+                  Hans Hermann Büdding Dld)</font></a><a target="_top" href="/gd/pelgrimf/par-Ftak.htm"><font color="#800000"> </font></a></font><br>
         <font face="Verdana" size="2" color="#800000">&nbsp;<a target="_blank" href="http://www.berghapedia.nl/index.php/Pelgrim,_Pelgrom_en_Pelgrum"><font color="#800000">3) 
                 Pelgrim-Pelgrom-Pelgrum (site van Tonny Thuijs)</font></a></font><br>
         <font face="Verdana" size="2"><font color="#800000">&nbsp;</font><a href="http://www.sagen.at/texte/sagen/oesterreich/wien/stephanskirche/meisterpilgram.html" target="_blank"><font color="#800000">4) 
@@ -108,13 +108,13 @@ A:HOVER {text-decoration: underline;}
                     Pelgrims. Genealoog en 'Oude schrijvers?'</font></a><font size="2" color="#800000" face="Verdana">
                 <a href="WaarheenPelgrim.htm">
                 <img border="0" src="img/Vis4.jpg" width="50" height="16"></a></font><br>
-                <a target="_blank" href="http://www.pelgrimfamilie.net/Graven-Fam/index.html">
+                <a target="_blank" href="/Graven-Fam/index.html">
                 <font face="Verdana" size="2" color="#800000"><b>&nbsp;</b>8) In dankbare 
           herinnering; Familieleden die ons voorgingen</font></a><br>
-                <a target="_blank" href="http://www.pelgrimfamilie.net/Graven-Oud/index.html">
+                <a target="_blank" href="/Graven-Oud/index.html">
                 <font face="Verdana" size="2" color="#800000"><b>&nbsp;</b>9) In dankbare 
           herinnering; Oudere Pelgrim-familiegraven</font></a><br>
-                <a target="_blank" href="http://www.pelgrimfamilie.net/Graven-Div/index.html">
+                <a target="_blank" href="/Graven-Div/index.html">
                 <font face="Verdana" size="2" color="#800000"><b>&nbsp;</b>10) In dankbare 
           herinnering; Diverse familiegraven</font></a><br>
         <b><font size="2" color="#008000" face="Verdana"><a href="hoofdpag4.html">&nbsp;11) LINKS</a></font></b></p>
@@ -278,7 +278,7 @@ A:HOVER {text-decoration: underline;}
           <tr>
             <td width="149" height="16">
               <p align="center"><font size="2">
-              <a target="_top" href="http://www.pelgrimfamilie.net/gd/KwartEle/KwartEle.htm">
+              <a target="_top" href="/gd/KwartEle/KwartEle.htm">
               <font color="#800000" face="Verdana">
               Elena, Lianne &amp; Rens</font></a></font>
             </td>
